# openglpractice

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  bright.frag  cube.frag  cube.vert  fs.frag  gaussx.frag  gaussxy.frag  gaussy.frag  main.cxx  post.frag  rays.frag  readme.md  rpibuild.sh  rpirelbuild.sh  showtex.frag  sky.frag  sync.rocket  sync_test.track  tunnel.frag  tunnel.vert  tunnel2.frag  tunnel2.vert  tunnelpost.frag  vs.vert  window.cxx  window.hxx
src/: bind_array.cxx  bind_array.hxx  bindable.hxx  debug.cxx  debug.hxx  demo.cxx  demo.hxx  drawable.cxx  drawable.hxx  fps_counter.cxx  fps_counter.hxx  gl_buffer.cxx  gl_buffer.hxx  gl_framebuffer.cxx  gl_framebuffer.hxx  gl_program.cxx  gl_program.hxx  gl_renderbuffer.cxx  gl_renderbuffer.hxx  gl_shader.cxx  gl_shader.hxx  gl_texture.cxx  gl_texture.hxx  gl_vertex_array.cxx  gl_vertex_array.hxx  gl_vertex_attrib.cxx  gl_vertex_attrib.hxx  loading_bar.cxx  loading_bar.hxx  main.cxx  mixer.cxx  mixer.hxx  pipeline.cxx  pipeline.hxx  player.cxx  player.hxx  shader.cxx  shader.hxx  shaders.cxx  shaders.hxx  (+7 more)
src/scenes/: sky.cxx  sky.hxx  test.cxx  test.hxx  tunnel.cxx  tunnel.hxx
