cmake_minimum_required (VERSION 3.1)
project (openglpractice)

# C++11
set (CMAKE_CXX_STANDARD 11)

# Glob src files
file(GLOB SRC_FILES
  "src/*.cxx"
)

# add the executable
add_executable(${PROJECT_NAME} ${SRC_FILES})

# for SDL
INCLUDE(FindPkgConfig)

# SDL2
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
#PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
#INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES})

# GLEW
PKG_SEARCH_MODULE(GLEW REQUIRED glew)
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GLEW_LIBRARIES})
